finish the final exam thingaroni

--- a/start.html
+++ b/start.html
@@ -99,10 +99,22 @@
                 width: 75%;
             }
             
+            .bike {
+                width:100%;
+                height:auto;
+                border: 4px double #fa6f2c;
+                border-style: double;
+
+            }
+
+            .vehicle-img {
+                margin: 5%;
+            }
+
             footer {
                 color: white;
                 margin-top: 15px;
-                padding-left: 12%;
+                padding-left: 15%;
                 font-size: 10px;
             }
             
@@ -123,7 +135,9 @@
                 </ul>
             </nav>
             <main>
-                <img class="double-border" src="images/Harley_UltraClassic_copy.jpg">
+                <div class="vehicle-img">
+                    <img class="bike" src="images/Harley_UltraClassic_copy.jpg">
+                </main>
             </main>
             <footer>
                 <p>&copy; 2019<br>
